@@ -1,5 +1,6 @@
 23 January 2009
 
+* Better error messages when creating a session or window fails.
 * Oops. Return non-zero on error. Reported by Will Maier.
 
 21 January 2009
@@ -1001,7 +1002,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.231 2009-01-23 16:19:56 nicm Exp $
+$Id: CHANGES,v 1.232 2009-01-23 16:59:14 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
